Travis: disable spinner

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,15 +24,15 @@ install:
   - conda config --add channels pcgr --add channels bioconda --add channels conda-forge
   - conda install -q python=$TRAVIS_PYTHON_VERSION pip requests conda-build jinja2 anaconda-client
   # Building packages
-  - git clone https://github.com/tlatsas/bash-spinner
-  - source bash-spinner/spinner.sh
-  - start_spinner "Installing PCGR"
+#  - git clone https://github.com/tlatsas/bash-spinner
+#  - source bash-spinner/spinner.sh
+#  - start_spinner "Installing PCGR"
   - conda build install_no_docker/conda_pkg/${PACKAGE_NAME}
-  - stop_spinner $?
+#  - stop_spinner $?
   - conda build install_no_docker/conda_pkg/${PACKAGE_NAME}_dockerized
   #
   # Dockerized installation:
-  - docker pull sigven/pcgr:dev
+  - docker pull sigven/pcgr:latest
   - conda install --use-local ${PACKAGE_NAME}_dockerized
   # Download the data bundle (usable for both version)
   - gdown https://drive.google.com/uc?id=1TdYagetk-l__aYBsaZJHJvYFStDnIEcq -O - | tar xzf - # grch37
