--- a/install_no_docker/conda_pkg/pcgr/meta.yaml
+++ b/install_no_docker/conda_pkg/pcgr/meta.yaml
@@ -89,6 +89,7 @@ requirements:
     # Perl (for VEP)
     - perl-bioperl
     - ensembl-vep ==98.3
+    - perl-bio-bigfile  # for Loftee (doesn't come with ensemble-vep, but will come with https://github.com/bioconda/bioconda-recipes/pull/18808 once merged)
     #
     # PCGR: R packages
     - r-base
