--- a/install_no_docker/conda_pkg/pcgr/meta.yaml
+++ b/install_no_docker/conda_pkg/pcgr/meta.yaml
@@ -21,7 +21,7 @@ requirements:
     - r-base
     - r-devtools
     - tar
-    - python
+    - python =3.7
     - toml
     #
     # Need R packages build-time to correctly install pcgrr
@@ -66,7 +66,7 @@ requirements:
   run:
     #
     # PCGR: python
-    - python
+    - python =3.7
     - pip
     - numpy
     - cython
