--- a/install_no_docker/conda_pkg/pcgr/meta.yaml
+++ b/install_no_docker/conda_pkg/pcgr/meta.yaml
@@ -62,6 +62,7 @@ requirements:
     - bioconductor-regioner
     - bioconductor-mutationalpatterns
     - r-shiny
+    - r-flexdashboard
 
   run:
     #
