--- a/src/R/pcgrr/NAMESPACE
+++ b/src/R/pcgrr/NAMESPACE
@@ -39,7 +39,7 @@ export(determine_pathogenicity_classification)
 export(detect_cancer_traits_clinvar)
 export(summary_donut_chart)
 export(assign_cpsr_tier)
-export(retrieve_sf_calls)
+export(retrieve_incidental_calls)
 export(generate_cpsr_report)
 export(virtual_panel_display_html)
 export(get_germline_biomarkers)
