--- a/src/R/pcgrr/DESCRIPTION
+++ b/src/R/pcgrr/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Personal Cancer Genome ReporteR
 Version: 0.9.2
 Date: 2021-06-05
-Authors@R: 
+Authors@R:
     c(person(given = "Sigve",
              family = "Nakken",
              role = c("aut", "cre"),
@@ -13,20 +13,52 @@ Maintainer: Sigve Nakken <sigven@ifi.uio.no>
 URL: https://github.com/sigven/pcgr
 BugReports: https://github.com/sigven/pcgr/issues
 Description: Functions, tools and utilities for the generation of clinical cancer genome reports with PCGR.
-    This R package is an integrated part of the Docker/Conda-based PCGR workflow (https://github.com/sigven/pcgr), 
+    This R package is an integrated part of the Docker/Conda-based PCGR workflow (https://github.com/sigven/pcgr),
     it should thus not be used as a stand-alone package.
-License: MIT
+License: MIT + file LICENSE
 biocViews:
-Imports: BSgenome.Hsapiens.UCSC.hg19, BSgenome.Hsapiens.UCSC.hg38, magrittr, 
-         data.table, ggplot2, BiocManager, plotly, usethis, GenomicRanges, GenomeInfoDb, 
-         S4Vectors, htmltools, caret, randomForest, UpSetR, Biostrings, RColorBrewer, 
-         VariantAnnotation, MutationalPatterns, flexdashboard, jsonlite, DT, tidyverse, 
-         assertable, ggpubr, devtools, log4r
-Depends: 
+Imports:
+    assertable,
+    assertthat,
+    BiocManager,
+    Biostrings,
+    caret,
+    data.table,
+    devtools,
+    DT,
+    dplyr,
+    flexdashboard,
+    GenomicRanges,
+    GenomeInfoDb,
+    ggplot2,
+    ggpubr,
+    htmltools,
+    IRanges,
+    jsonlite,
+    log4r,
+    magrittr,
+    methods,
+    MutationalPatterns,
+    plotly,
+    randomForest,
+    RColorBrewer,
+    reshape2,
+    rlang,
+    rmarkdown,
+    S4Vectors,
+    scales,
+    stringr,
+    tidyr,
+    UpSetR,
+    usethis,
+    VariantAnnotation
+Depends:
     R (>= 4.0)
-Suggests: 
-    testthat
+Suggests:
+    testthat,
+    BSgenome.Hsapiens.UCSC.hg19,
+    BSgenome.Hsapiens.UCSC.hg38
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Roxygen: list(markdown = TRUE)
