--- a/src/R/pcgrr/DESCRIPTION
+++ b/src/R/pcgrr/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: pcgrr
 Type: Package
 Title: Personal Cancer Genome ReporteR
-Version: 0.9.2
-Date: 2021-06-05
+Version: 0.9.3
+Date: 2021-11-25
 Authors@R:
     c(person(given = "Sigve",
              family = "Nakken",
@@ -51,7 +51,8 @@ Imports:
     tidyr,
     UpSetR,
     usethis,
-    VariantAnnotation
+    VariantAnnotation,
+    BiocGenerics
 Depends:
     R (>= 4.0)
 Suggests:
