update after devtools::check

--- a/src/R/pcgrr/NAMESPACE
+++ b/src/R/pcgrr/NAMESPACE
@@ -52,6 +52,7 @@ export(get_clin_assocs_cna)
 export(get_clin_assocs_snv_indel)
 export(get_cna_cytoband)
 export(get_cna_overlapping_transcripts)
+export(get_genome_obj)
 export(get_germline_biomarkers)
 export(get_insilico_prediction_statistics)
 export(get_max_rows_pr_datatable)
