--- a/conda/pcgr_env.yml
+++ b/conda/pcgr_env.yml
@@ -6,20 +6,54 @@ channels:
   - defaults
 
 dependencies:
-  - python >=3.7.3
-  - r-base >=4.0
+  - python ==3.9.7
+  - r-base ==4.0.5
+  - ensembl-vep ==104.3
+  - cython ==0.29.24
+  - scipy ==1.7.3
+  - pandas ==1.3.4
+  - htslib ==1.10.2
+  - cyvcf2 ==0.30.11
+  - bedtools ==2.30.0
+  - vcfanno ==0.3.3
+  - vt ==0.57721
+  - vcf2maf ==1.6.18
+
+  # R packages
   - r-argparse
-  - r-tidyverse
-  - ensembl-vep >=104.3
-  - cython >=0.29.21
-  - scipy >=1.5.3
-  - pandas >=1.1.3
-  - htslib
-  - cyvcf2 >=0.20.9
-  - samtools =1.10
-  - bedtools =2.26
-  - vcfanno =0.3.2
-  - tabix
-  - vt
-  - vcf2maf =1.6.18
-  - nlopt =2.6.2
+  - r-assertable
+  - r-assertthat
+  - bioconductor-biocgenerics
+  - r-biocmanager
+  - bioconductor-bsgenome.hsapiens.ucsc.hg38
+  - bioconductor-biostrings
+  - r-caret
+  - r-data.table
+  - r-devtools
+  - r-dt
+  - r-dplyr
+  - r-flexdashboard
+  - bioconductor-genomicranges
+  - bioconductor-genomeinfodb
+  - r-ggplot2
+  - r-ggpubr
+  - r-glue
+  - r-htmltools
+  - bioconductor-iranges
+  - r-jsonlite
+  - r-log4r
+  - r-magrittr
+  - bioconductor-mutationalpatterns
+  - r-plotly
+  - r-randomforest
+  - r-rcolorbrewer
+  - r-reshape2
+  - r-rlang
+  - r-rmarkdown
+  - r-roxygen2
+  - bioconductor-s4vectors
+  - r-scales
+  - r-tidyr
+  - r-upsetr
+  - r-usethis
+  - bioconductor-variantannotation
