--- a/conda/pcgr/meta.yaml
+++ b/conda/pcgr/meta.yaml
@@ -1,18 +1,18 @@
-{% set name = 'pcgr_test' %}
-{% set version = os.environ.get('VERSION', '').replace('v.', '').replace('v', '') or '0.0.1' %}
+{% set name = 'pcgr' %}
+{% set version = '0.9.2' %}
 
 package:
   name: {{ name }}
   version: {{ version }}
 
 source:
-  path: ../../../
+  path: ../../
 
 build:
   number: 0
   rpaths:
+    - lib/R/lib/
     - lib/
-    - lib/R/library/
 
 requirements:
   build:
@@ -20,100 +20,28 @@ requirements:
     - unzip
     - tar
     - pip
-    - python =3.7
-    - r-base =4.1.0
-    - r-devtools >=2.4.1
-    - r-usethis >=2.0.1
-    - r-purrr >=0.3.4
-    - r-dplyr >=1.0.6
-    - r-stringr >=1.4.0
-    - r-tidyr >=1.1.3
-    - r-httr >=1.4.2
-    - r-git2r >=0.28.0
-    - r-data.table >=1.14.0
-    - r-magrittr >=2.0.1
-    - r-htmltools >=0.5.1.1
-    - r-caret >=6.0_88
-    - r-randomforest >=4.6_14
-    - r-plotly >=4.9.3
-    - r-ggplot2 >=3.3.3
-    - r-dt >=0.18
-    - r-stringi >=1.6.1
-    - r-htmlwidgets >=1.5.3
-    - r-crosstalk >=1.1.1
-    - r-knitr >=1.33
-    - r-rmarkdown >=2.8
-    - r-biocmanager =1.30.15
-    - bioconductor-variantannotation >=1.38.0
-    - bioconductor-bsgenome.hsapiens.ucsc.hg19 >=1.4.3
-    - bioconductor-bsgenome.hsapiens.ucsc.hg38 >=1.4.3
-    - bioconductor-mutationalpatterns >=3.2.0
-    - r-flexdashboard >=0.5.2
-    - r-tidyverse >=1.3.1
-    - r-ggpubr >=0.4.0
-    - r-upsetr >=1.4.0
-    - r-log4r >=0.3.2
+    - python ==3.7
+    - r-base ==4.0.5
+    - r-pcgrr
   run:
-    # PCGR: python
-    - python =3.7
-    - r-base =4.1.0
-    - ensembl-vep >=104.3
-    - pip
-    ##- numpy >=1.19.2
-    - cython >=0.29.21
-    - scipy >=1.5.3
-    - pandas >=1.1.3
-    - cyvcf2 >=0.20.9
-    - samtools =1.10
-    - bedtools =2.26
-    - vcfanno =0.3.2
-    #
-    # PCGR: other tools
-    - tabix
-    - vt
-    ##- htslib
-    - vcf2maf =1.6.18
-    - nlopt =2.6.2
-    - perl-bio-bigfile  # for Loftee (doesn't come with ensemble-vep, but will come with https://github.com/bioconda/bioconda-recipes/pull/18808 once merged)
-    - r-devtools >=2.4.1
-    - r-usethis >=2.0.1
-    - r-purrr >=0.3.4
-    - r-dplyr >=1.0.6
-    - r-stringr >=1.4.0
-    - r-tidyr >=1.1.3
-    - r-httr >=1.4.2
-    - r-git2r >=0.28.0
-    - r-data.table >=1.14.0
-    - r-magrittr >=2.0.1
-    - r-htmltools >=0.5.1.1
-    - r-caret <=6.0_88
-    - r-randomforest >=4.6_14
-    - r-plotly >=4.9.3
-    - r-ggplot2 >=3.3.3
-    - r-dt >=0.18
-    - r-stringi >=1.6.1
-    - r-htmlwidgets >=1.5.3
-    - r-crosstalk >=1.1.1
-    - r-knitr >=1.33
-    - r-log4r >=0.3.2
-    - r-rmarkdown >=2.8
-    - r-biocmanager >=1.30.15
-    - bioconductor-variantannotation >=1.38.0
-    - bioconductor-bsgenome.hsapiens.ucsc.hg19 >=1.4.3
-    - bioconductor-bsgenome.hsapiens.ucsc.hg38 >=1.4.3
-    - bioconductor-mutationalpatterns >=3.2.0
-    - r-shiny >=1.5.0
-    - r-flexdashboard >=0.5.2
-    - r-tidyverse >=1.3.1
-    - r-ggpubr >=0.4.0
-    - r-upsetr >=1.4.0
+    - python ==3.7
+    - r-base ==4.0.5
+    - r-pcgrr
+    - ensembl-vep ==104.3
+    - cython ==0.29.24
+    - scipy ==1.7.3
+    - pandas ==1.3.4
+    - htslib ==1.10.2
+    - cyvcf2 ==0.30.11
+    - bedtools ==2.30.0
+    - vcfanno ==0.3.3
+    - vt ==0.57721
+    - vcf2maf ==1.6.18
 
 test:
   commands:
-    - pcgr.py --version
-    - '$R -e ".libPaths(R.home(\"library\")); library(pcgrr)"'
-  imports:
-    - annoutils
+    - pcgr --version
+    - $R -e "library('pcgrr')"
 
 about:
   home: https://github.com/sigven/pcgr
