--- a/conda/pcgr_env.yml
+++ b/conda/pcgr_env.yml
@@ -1,56 +1,18 @@
 name: pcgr_dev
 
 channels:
+  - pdiakumis
   - conda-forge
   - bioconda
   - defaults
 
 dependencies:
   - python ==3.6.13
+  - pcgr
   - r-base ==4.1.1
-  - ensembl-vep ==104.3
-  - cyvcf2 ==0.10.0
-  - htslib ==1.12
-  - bedtools ==2.30.0
-  - vcfanno ==0.3.3
-  - vt ==0.57721
-  - vcf2maf ==1.6.18
-
-  # R packages
-  - r-argparse
-  - r-assertable
-  - r-assertthat
-  - bioconductor-biocgenerics
-  - r-biocmanager
+  - r-pcgrr # this comes with pcgr but anyway
   - bioconductor-bsgenome.hsapiens.ucsc.hg38
-  - bioconductor-biostrings
-  - r-caret
-  - r-data.table
-  - r-devtools
-  - r-dt
-  - r-dplyr
-  - r-flexdashboard
-  - bioconductor-genomicranges
-  - bioconductor-genomeinfodb
-  - r-ggplot2
-  - r-ggpubr
-  - r-glue
-  - r-htmltools
-  - bioconductor-iranges
-  - r-jsonlite
-  - r-log4r
-  - r-magrittr
-  - bioconductor-mutationalpatterns
-  - r-plotly
-  - r-randomforest
-  - r-rcolorbrewer
-  - r-reshape2
-  - r-rlang
-  - r-rmarkdown
+  # for R development
   - r-roxygen2
-  - bioconductor-s4vectors
-  - r-scales
-  - r-tidyr
-  - r-upsetr
-  - r-usethis
-  - bioconductor-variantannotation
+  - r-rmarkdown
+  - r-devtools
