--- a/conda/pcgrr/meta.yaml
+++ b/conda/pcgrr/meta.yaml
@@ -1,6 +1,4 @@
 {% set version = '0.9.2' %}
-{% set posix = 'm2-' if win else '' %}
-{% set native = 'm2w64-' if win else '' %}
 
 package:
   name: r-pcgrr
@@ -10,7 +8,6 @@ source:
   path: ../../pcgrr
 
 build:
-  merge_build_host: True  # [win]
   number: 0
   noarch: generic
   rpaths:
@@ -19,9 +16,7 @@ build:
 
 requirements:
   build:
-    - {{ posix }}git
-    - {{ posix }}zip               # [win]
-
+    - git
   host:
     - r-base ==4.1.1
     - r-assertable
@@ -100,8 +95,7 @@ requirements:
 
 test:
   commands:
-    - $R -e "library('pcgrr')"                # [not win]
-    - "\"%R%\" -e \"library('pcgrr')\""  # [win]
+    - $R -e "library('pcgrr')"
 
 about:
   home: https://github.com/sigven/pcgr/pcgrr
