handle pcgrr conda pkg versioning

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -14,3 +14,7 @@ replace = __version__ = '{new_version}'
 [bumpversion:file:setup.py]
 search = version='{current_version}'
 replace = version='{new_version}'
+
+[bumpversion:file:setup.py]
+search = version: {current_version}
+replace = version: {new_version}
