--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -15,6 +15,14 @@ replace = __version__ = '{new_version}'
 search = version='{current_version}'
 replace = version='{new_version}'
 
-[bumpversion:file:setup.py]
+[bumpversion:file:conda/recipe/pcgrr/meta.yaml]
 search = version: {current_version}
 replace = version: {new_version}
+
+[bumpversion:file:conda/env/yml/pcgr.yml]
+search = pcgr =={current_version}
+replace = pcgr =={new_version}
+
+[bumpversion:file:conda/env/yml/pcgrr.yml]
+search = pcgrr =={current_version}
+replace = pcgrr =={new_version}
