add GH Action for Docker build

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -26,3 +26,7 @@ replace = pcgr =={new_version}
 [bumpversion:file:conda/env/yml/pcgrr.yml]
 search = pcgrr =={current_version}
 replace = pcgrr =={new_version}
+
+[bumpversion:file:.github/workflows/release.yaml]
+search = VERSION: '{current_version}'
+replace = VERSION: '{new_version}'
