--- a/.github/workflows/build_conda_recipes.yaml
+++ b/.github/workflows/build_conda_recipes.yaml
@@ -10,6 +10,7 @@ env:
   recipe_path: conda/recipe
   env_yml_path: conda/env/yml
   env_lock_path: conda/env/lock
+  VERSION: '0.10.2' # versioned by bump2version
 jobs:
   build_conda_pkgs:
     # When merging to one of the branches above and the commit message matches
@@ -68,15 +69,53 @@ jobs:
       - name: Git Status
         run: |
           git status
-      - name: Create Pull Request
-        id: cpr
-        uses: peter-evans/create-pull-request@v3
+      - name: Commit changes
+        run: |
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub Actions"
+          git commit -am "[bot] Updating conda-lock files."
+          git push
+
+  docker_deploy:
+    name: Build and deploy Docker
+    runs-on: ubuntu-latest
+    needs: conda_lock
+    defaults:
+      run:
+        shell: bash -l {0}
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Create tag
+        uses: actions/github-script@v5
         with:
-          commit-message: Update conda locks
-          committer: GitHub <noreply@github.com>
-          author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
-          branch: create-pull-request/patch
-          delete-branch: true
-          title: 'GH Actions: update conda locks'
-          assignees: pdiakumis
-          reviewers: sigven,pdiakumis
+          script: |
+            const the_tag_name = 'refs/tags/v' + process.env.VERSION
+            github.rest.git.createRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: the_tag_name,
+              sha: context.sha
+            })
+
+      # checkout tag from above
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          ref: v${{ env.VERSION }}
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build image and push to DockerHub
+        uses: docker/build-push-action@v2
+        with:
+          context: . # yes, dot
+          push: true
+          tags: |
+            sigven/pcgr:${{ env.VERSION }}
