add perl-bio-bigfile to pcgr conda env

--- a/conda/env/yml/pcgr.yml
+++ b/conda/env/yml/pcgr.yml
@@ -12,7 +12,8 @@ dependencies:
   - cyvcf2 ==0.30.11
   - ensembl-vep ==105.0
   - htslib ==1.10.2
+  - pandoc ==2.16
+  - perl-bio-bigfile ==1.07
   - vcfanno ==0.3.3
   - vt
   - vcf2maf ==1.6.21
-  - pandoc =2.16
