pcgrr: export log functions

--- a/pcgrr/NAMESPACE
+++ b/pcgrr/NAMESPACE
@@ -80,6 +80,9 @@ export(kataegis_detect)
 export(kataegis_input)
 export(load_all_eitems)
 export(load_eitems)
+export(log4r_debug)
+export(log4r_info)
+export(log4r_warn)
 export(log_var_eitem_stats)
 export(make_upset_plot_data)
 export(match_eitems_to_var)
