--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -1,7 +1,11 @@
 # Workflow derived from https://github.com/r-lib/actions/tree/master/examples
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
+#on:
+  #workflow_dispatch
 on:
-  workflow_dispatch
+  push:
+    branches:
+      - pkgdown
 
 name: pkgdown
 
