--- a/.github/workflows/build_conda_recipes.yaml
+++ b/.github/workflows/build_conda_recipes.yaml
@@ -76,6 +76,37 @@ jobs:
           git commit -am "[bot] Updating conda-lock files."
           git push
 
+  pkgdown-site:
+    name: Deploy pkgdown website
+    runs-on: ubuntu-latest
+    needs: build_conda_pkgs
+    defaults:
+      run:
+        shell: bash -l {0}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Set up miniconda
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          auto-update-conda: true
+          auto-activate-base: true
+          activate-environment: ""
+          mamba-version: "*"
+          channels: "pcgr,conda-forge,bioconda"
+      - name: Install conda packages
+        run: mamba env create -n pkgdown -f ${env_yml_path}/pkgdown.yml
+      - name: Publish pkgdown website
+        run: |
+            git config --local user.email "actions@github.com"
+            git config --local user.name "GitHub Actions"
+            conda activate pkgdown
+            cp pcgrr/DESCRIPTION . # hack for pkgdown to work
+            printf "pcgrr version:\n"
+            Rscript -e "packageVersion('pcgrr')"
+            Rscript -e "pkgdown::deploy_to_branch(pkg = 'pcgrr', commit_message = paste(pkgdown:::construct_commit_message('.'), '- see https://umccr.github.io/pcgr/'), branch = 'gh-pages', new_process = FALSE)"
+
+
   docker_deploy:
     name: Build and deploy Docker
     runs-on: ubuntu-latest
