track pkgdown env when bumping

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -27,6 +27,10 @@ replace = pcgr =={new_version}
 search = pcgrr =={current_version}
 replace = pcgrr =={new_version}
 
+[bumpversion:file:conda/env/yml/pkgdown.yml]
+search = pcgrr =={current_version}
+replace = pcgrr =={new_version}
+
 [bumpversion:file:.github/workflows/build_conda_recipes.yaml]
 search = VERSION: '{current_version}'
 replace = VERSION: '{new_version}'
