--- a/conda/env/yml/pkgdown.yml
+++ b/conda/env/yml/pkgdown.yml
@@ -1,6 +1,6 @@
 name: pkgdown
 dependencies:
-  - r-pcgrr ==0.10.9
+  - r-pcgrr ==0.10.9 # versioned by bump2version
   - r-cpsr
   - r-pkgdown
   - pandoc
