--- a/pcgrr/DESCRIPTION
+++ b/pcgrr/DESCRIPTION
@@ -2,14 +2,19 @@ Package: pcgrr
 Type: Package
 Title: Personal Cancer Genome ReporteR
 Version: 0.10.10
-Date: 2021-12-08
+Date: 2022-01-26
 Authors@R:
     c(person(given = "Sigve",
              family = "Nakken",
              role = c("aut", "cre"),
              email = "sigven@ifi.uio.no",
-             comment = c(ORCID = "0000-0001-8468-2050")))
-Maintainer: Sigve Nakken <sigven@ifi.uio.no>
+             comment = c(ORCID = "0000-0001-8468-2050")),
+      person(given = "Peter",
+             family = "Diakumis",
+             role = c("aut", "ctb"),
+             email = "peterdiakumis@gmail.com",
+             comment = c(ORCID = "0000-0002-7502-7545")))
+Maintainer: Sigve Nakken <sigven@ifi.uio.no>, Peter Diakumis <peterdiakumis@gmail.com>
 URL: https://github.com/sigven/pcgr,
     https://sigven.github.io/pcgr/
 BugReports: https://github.com/sigven/pcgr/issues
