--- a/pcgrr/DESCRIPTION
+++ b/pcgrr/DESCRIPTION
@@ -19,7 +19,7 @@ URL: https://github.com/sigven/pcgr,
     https://sigven.github.io/pcgr/
 BugReports: https://github.com/sigven/pcgr/issues
 Description: Functions, tools and utilities for the generation of clinical cancer genome reports with PCGR.
-    This R package is an integrated part of the Docker/Conda-based PCGR workflow (https://github.com/sigven/pcgr),
+    This R package is an integrated part of the PCGR workflow (https://github.com/sigven/pcgr),
     it should thus not be used as a stand-alone package.
 License: MIT + file LICENSE
 biocViews:
