--- a/.github/workflows/build_conda_recipes.yaml
+++ b/.github/workflows/build_conda_recipes.yaml
@@ -65,10 +65,11 @@ jobs:
           use-mamba: true
       - name: Generate conda locks
         run: |
-          conda-lock lock --mamba --file ${env_yml_path}/pcgr.yml --filename-template 'pcgr-{platform}.lock' -p osx-64 -p linux-64
-          conda-lock lock --mamba --file ${env_yml_path}/pcgrr.yml --filename-template 'pcgrr-{platform}.lock' -p osx-64 -p linux-64
+          echo "foo" > pcgrr-tmp.lock
+          #conda-lock lock --mamba --file ${env_yml_path}/pcgr.yml --filename-template 'pcgr-{platform}.lock' -p osx-64 -p linux-64
+          #conda-lock lock --mamba --file ${env_yml_path}/pcgrr.yml --filename-template 'pcgrr-{platform}.lock' -p osx-64 -p linux-64
           mv pcgrr-*.lock ${env_lock_path}
-          mv pcgr-*.lock ${env_lock_path}
+          #mv pcgr-*.lock ${env_lock_path}
       - name: Commit changes
         run: |
           git status
@@ -79,35 +80,35 @@ jobs:
           git commit -m "${MSG}"
           git push
 
-  pkgdown-site:
-    name: Deploy pkgdown website
-    runs-on: ubuntu-latest
-    needs: build_conda_pkgs
-    defaults:
-      run:
-        shell: bash -l {0}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Set up miniconda
-        uses: conda-incubator/setup-miniconda@v2
-        with:
-          auto-update-conda: true
-          auto-activate-base: true
-          activate-environment: ""
-          mamba-version: "*"
-          channels: "pcgr,conda-forge,bioconda"
-      - name: Install conda packages
-        run: mamba env create -n pkgdown -f ${env_yml_path}/pkgdown.yml
-      - name: Publish pkgdown website
-        run: |
-            git config --local user.email "actions@github.com"
-            git config --local user.name "GitHub Actions"
-            conda activate pkgdown
-            cp pcgrr/DESCRIPTION . # hack for pkgdown to work
-            printf "pcgrr version:\n"
-            Rscript -e "packageVersion('pcgrr')"
-            Rscript -e "pkgdown::deploy_to_branch(pkg = 'pcgrr', commit_message = paste(pkgdown:::construct_commit_message('.'), '- see https://sigven.github.io/pcgr/'), branch = 'gh-pages', new_process = FALSE)"
+# pkgdown-site:
+#   name: Deploy pkgdown website
+#   runs-on: ubuntu-latest
+#   needs: build_conda_pkgs
+#   defaults:
+#     run:
+#       shell: bash -l {0}
+#   steps:
+#     - name: Checkout code
+#       uses: actions/checkout@v2
+#     - name: Set up miniconda
+#       uses: conda-incubator/setup-miniconda@v2
+#       with:
+#         auto-update-conda: true
+#         auto-activate-base: true
+#         activate-environment: ""
+#         mamba-version: "*"
+#         channels: "pcgr,conda-forge,bioconda"
+#     - name: Install conda packages
+#       run: mamba env create -n pkgdown -f ${env_yml_path}/pkgdown.yml
+#     - name: Publish pkgdown website
+#       run: |
+#           git config --local user.email "actions@github.com"
+#           git config --local user.name "GitHub Actions"
+#           conda activate pkgdown
+#           cp pcgrr/DESCRIPTION . # hack for pkgdown to work
+#           printf "pcgrr version:\n"
+#           Rscript -e "packageVersion('pcgrr')"
+#           Rscript -e "pkgdown::deploy_to_branch(pkg = 'pcgrr', commit_message = paste(pkgdown:::construct_commit_message('.'), '- see https://sigven.github.io/pcgr/'), branch = 'gh-pages', new_process = FALSE)"
 
   docker_deploy:
     name: Build and deploy Docker
@@ -120,20 +121,26 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Pull lock commit
+      - id: pull_lock_commit
+        name: Pull lock commit
         run: |
             git pull --no-rebase # for pulling in the changed locks
             git --no-pager log --decorate=short --pretty=oneline -n3
+            LATEST_COMMIT_HASH="$(git --no-pager log -1 --format='%H')"
+            echo "::set-output name=latest_commit_hash::${LATEST_COMMIT_HASH}"
       - name: Create tag
         uses: actions/github-script@v5
+        env:
+          LATEST_COMMIT_HASH: ${{ steps.pull_lock_commit.outputs.latest_commit_hash }}
         with:
           script: |
             const the_tag_name = 'refs/tags/v' + process.env.VERSION
+            const the_sha = process.env.LATEST_COMMIT_HASH
             github.rest.git.createRef({
               owner: context.repo.owner,
               repo: context.repo.repo,
               ref: the_tag_name,
-              sha: context.sha
+              sha: the_sha
             })
 
       # checkout tag from above
@@ -141,18 +148,21 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: v${{ env.VERSION }}
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build image and push to DockerHub
-        uses: docker/build-push-action@v2
-        with:
-          context: . # yes, dot
-          push: true
-          tags: |
-            sigven/pcgr:${{ env.VERSION }}
+      - name: test
+        run: |
+            git --no-pager log --decorate=short --pretty=oneline -n5
+#     - name: Set up Docker Buildx
+#       id: buildx
+#       uses: docker/setup-buildx-action@v1
+#     - name: Login to DockerHub
+#       uses: docker/login-action@v1
+#       with:
+#         username: ${{ secrets.DOCKERHUB_USERNAME }}
+#         password: ${{ secrets.DOCKERHUB_TOKEN }}
+#     - name: Build image and push to DockerHub
+#       uses: docker/build-push-action@v2
+#       with:
+#         context: . # yes, dot
+#         push: true
+#         tags: |
+#           sigven/pcgr:${{ env.VERSION }}
