--- a/.github/workflows/build_conda_recipes.yaml
+++ b/.github/workflows/build_conda_recipes.yaml
@@ -5,7 +5,6 @@ on:
     branches:
       - master
       - dev
-      - fix_versioning
 env:
   atoken: ${{ secrets.ANACONDA_UPLOAD_TOKEN }}
   recipe_path: conda/recipe
@@ -25,21 +24,20 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-#     - name: Set up Mambaforge
-#       uses: conda-incubator/setup-miniconda@v2
-#       with:
-#         miniforge-variant: Mambaforge
-#         miniforge-version: 4.11.0-0
-#         show-channel-urls: true
-#         auto-activate-base: false
-#         activate-environment: condabuild
-#         environment-file: ${{ env.env_yml_path }}/condabuild.yml
-#         use-mamba: true
+      - name: Set up Mambaforge
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          miniforge-variant: Mambaforge
+          miniforge-version: 4.11.0-0
+          show-channel-urls: true
+          auto-activate-base: false
+          activate-environment: condabuild
+          environment-file: ${{ env.env_yml_path }}/condabuild.yml
+          use-mamba: true
       - name: Build + upload pcgr/pcgrr conda pkgs
         run: |
-          echo "build conda pkgs bla bla"
-          #conda mambabuild ${recipe_path}/pcgr -c conda-forge -c bioconda --token ${atoken} --quiet
-          #conda mambabuild ${recipe_path}/pcgrr -c conda-forge -c bioconda --token ${atoken} --quiet
+          conda mambabuild ${recipe_path}/pcgr -c conda-forge -c bioconda --token ${atoken} --quiet
+          conda mambabuild ${recipe_path}/pcgrr -c conda-forge -c bioconda --token ${atoken} --quiet
 
   # spin up fresh instance since conda-lock
   # takes ages when run on previous one
@@ -54,22 +52,20 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-#     - name: Set up Mambaforge
-#       uses: conda-incubator/setup-miniconda@v2
-#       with:
-#         miniforge-variant: Mambaforge
-#         miniforge-version: 4.11.0-0
-#         show-channel-urls: true
-#         auto-activate-base: false
-#         activate-environment: condabuild
-#         environment-file: ${{ env.env_yml_path }}/condabuild.yml
-#         use-mamba: true
+      - name: Set up Mambaforge
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          miniforge-variant: Mambaforge
+          miniforge-version: 4.11.0-0
+          show-channel-urls: true
+          auto-activate-base: false
+          activate-environment: condabuild
+          environment-file: ${{ env.env_yml_path }}/condabuild.yml
+          use-mamba: true
       - name: Generate conda locks
         run: |
-          echo "foo2" > pcgrr-tmp.lock
-          echo "bar" > pcgr-tmp.lock
-          #conda-lock lock --mamba --file ${env_yml_path}/pcgr.yml --filename-template 'pcgr-{platform}.lock' -p osx-64 -p linux-64
-          #conda-lock lock --mamba --file ${env_yml_path}/pcgrr.yml --filename-template 'pcgrr-{platform}.lock' -p osx-64 -p linux-64
+          conda-lock lock --mamba --file ${env_yml_path}/pcgr.yml --filename-template 'pcgr-{platform}.lock' -p osx-64 -p linux-64
+          conda-lock lock --mamba --file ${env_yml_path}/pcgrr.yml --filename-template 'pcgrr-{platform}.lock' -p osx-64 -p linux-64
           mv pcgrr-*.lock ${env_lock_path}
           mv pcgr-*.lock ${env_lock_path}
       - name: Commit changes
@@ -82,35 +78,35 @@ jobs:
           git commit -m "${MSG}"
           git push
 
-# pkgdown-site:
-#   name: Deploy pkgdown website
-#   runs-on: ubuntu-latest
-#   needs: build_conda_pkgs
-#   defaults:
-#     run:
-#       shell: bash -l {0}
-#   steps:
-#     - name: Checkout code
-#       uses: actions/checkout@v2
-#     - name: Set up miniconda
-#       uses: conda-incubator/setup-miniconda@v2
-#       with:
-#         auto-update-conda: true
-#         auto-activate-base: true
-#         activate-environment: ""
-#         mamba-version: "*"
-#         channels: "pcgr,conda-forge,bioconda"
-#     - name: Install conda packages
-#       run: mamba env create -n pkgdown -f ${env_yml_path}/pkgdown.yml
-#     - name: Publish pkgdown website
-#       run: |
-#           git config --local user.email "actions@github.com"
-#           git config --local user.name "GitHub Actions"
-#           conda activate pkgdown
-#           cp pcgrr/DESCRIPTION . # hack for pkgdown to work
-#           printf "pcgrr version:\n"
-#           Rscript -e "packageVersion('pcgrr')"
-#           Rscript -e "pkgdown::deploy_to_branch(pkg = 'pcgrr', commit_message = paste(pkgdown:::construct_commit_message('.'), '- see https://sigven.github.io/pcgr/'), branch = 'gh-pages', new_process = FALSE)"
+  pkgdown-site:
+    name: Deploy pkgdown website
+    runs-on: ubuntu-latest
+    needs: build_conda_pkgs
+    defaults:
+      run:
+        shell: bash -l {0}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Set up miniconda
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          auto-update-conda: true
+          auto-activate-base: true
+          activate-environment: ""
+          mamba-version: "*"
+          channels: "pcgr,conda-forge,bioconda"
+      - name: Install conda packages
+        run: mamba env create -n pkgdown -f ${env_yml_path}/pkgdown.yml
+      - name: Publish pkgdown website
+        run: |
+            git config --local user.email "actions@github.com"
+            git config --local user.name "GitHub Actions"
+            conda activate pkgdown
+            cp pcgrr/DESCRIPTION . # hack for pkgdown to work
+            printf "pcgrr version:\n"
+            Rscript -e "packageVersion('pcgrr')"
+            Rscript -e "pkgdown::deploy_to_branch(pkg = 'pcgrr', commit_message = paste(pkgdown:::construct_commit_message('.'), '- see https://sigven.github.io/pcgr/'), branch = 'gh-pages', new_process = FALSE)"
 
   docker_deploy:
     name: Build and deploy Docker
@@ -153,18 +149,18 @@ jobs:
       - name: test
         run: |
             git --no-pager log --decorate=short --pretty=oneline -n5
-#     - name: Set up Docker Buildx
-#       id: buildx
-#       uses: docker/setup-buildx-action@v1
-#     - name: Login to DockerHub
-#       uses: docker/login-action@v1
-#       with:
-#         username: ${{ secrets.DOCKERHUB_USERNAME }}
-#         password: ${{ secrets.DOCKERHUB_TOKEN }}
-#     - name: Build image and push to DockerHub
-#       uses: docker/build-push-action@v2
-#       with:
-#         context: . # yes, dot
-#         push: true
-#         tags: |
-#           sigven/pcgr:${{ env.VERSION }}
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build image and push to DockerHub
+        uses: docker/build-push-action@v2
+        with:
+          context: . # yes, dot
+          push: true
+          tags: |
+            sigven/pcgr:${{ env.VERSION }}
