--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -7,6 +7,10 @@ tag = False
 search = Version: {current_version}
 replace = Version: {new_version}
 
+[bumpversion:file:pcgrr/vignettes/installation.Rmd]
+search = PCGR_VERSION="{current_version}"
+replace = PCGR_VERSION="{new_version}"
+
 [bumpversion:file:pcgr/_version.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
