minor bump2version fixes and README updates

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -8,8 +8,8 @@ search = Version: {current_version}
 replace = Version: {new_version}
 
 [bumpversion:file:pcgrr/vignettes/installation.Rmd]
-search = PCGR_VERSION="{current_version}"
-replace = PCGR_VERSION="{new_version}"
+search = {current_version}
+replace = {new_version}
 
 [bumpversion:file:pcgr/_version.py]
 search = __version__ = '{current_version}'
